update to java 21 (2)